# chiral-db

./: .editorconfig  .env.example  .gitignore  .license_header.txt  .pre-commit-config.yaml  Justfile  LICENSE  README.md  assignment1.md  check_ports.py  demo2.py  docker-compose.yml  feed_data.py  feed_data2.py  feed_data3.py  mkdocs.yml  pyproject.toml  query.md  simulation_code.py  verify_assignment.py  verify_connections.py
.github/workflows/: ci.yml
benchmark-results/: benchmark_records_a4.json  benchmark_summary_a4.json  comparison_results.json  comparison_summary.md
docs/: index.md
docs/getting_started/: dashboard.md  installation.md
docs/guide/: client_api.md  query_language.md
docs/internals/: architecture.md
examples/: programmatic_demo.py  programmatic_usage.py  simulate_ingestion.py
scripts/: manage.py  performance_benchmark.py  performance_comparison.py
src/chiral/: __init__.py  cli.py  client.py  config.py  main.py
src/chiral/core/: __init__.py  ingestion.py  orchestrator.py  query_service.py
src/chiral/db/: connection.py  query_builder.py  schema.py  sessions.py
src/chiral/domain/: normalization.py
src/chiral/utils/: __init__.py  clock.py  heuristics.py
src/chiral/worker/: __init__.py  analyzer.py  migrator.py
tests/: __init__.py  conftest.py  test_acid_properties.py  test_config.py  test_migration_step4_helpers.py  test_normalization_phase2.py  test_performance_benchmark.py  test_performance_comparison.py  test_query_phase6.py  test_schema_step3.py
webapp/: readme.md
webapp/dashboard/: package-lock.json
webapp/dashboard/src/: CrudPanel.tsx  SearchableDropdown.tsx  api.ts  index.css
webapp/my-react-flow-app/: package.json
webapp/my-react-flow-app/src/: App.tsx  SearchableDropdown.tsx  api.ts
