[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chiral-db"
version = "1.0.1"
description = "A session-scoped self-adaptive database framework for logical object-oriented data management."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Devansh Lodha", email = "devansh.lodha@iitgn.ac.in"},
]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "matplotlib>=3.10.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[project.scripts]
chiral = "chiral.cli:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chiral"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.pylint]
max-returns = 10

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", "COM812", "ISC001", "S608", "PLR2004", "PLR0913", 
    "PLR0912", "PLR0915", "E501", "C901", "BLE001", "T201", "FBT003", 
    "D103", "S603", "S607", "S310", "ANN401", "FBT001", "S311", "ERA001"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "SLF001", "EM101", "ARG001", "TRY003"]
"examples/programmatic_demo.py" = ["ALL"]
"scripts/performance_comparison.py" = ["SLF001", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
